Fix spacing of logos

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -920,6 +920,10 @@ video {
 }
 .logo-box:nth-child(4) {
   /* padding-top: 100px; */
+  padding-left: 0;
+}
+.logo-box:nth-child(3){
+  padding-right: 0;
 }
 .logo-box:nth-child(1n+4) {
   padding-top: 50px;
